crates/cli/tests/snapshots/snapshot_tests__json_unused_enum_members_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: redact_version(&json_str)
---
{
  "schema_version": 6,
  "version": "[VERSION]",
  "elapsed_ms": 0,
  "total_issues": 1,
  "summary": {
    "total_issues": 1,
    "unused_files": 0,
    "unused_exports": 0,
    "unused_types": 0,
    "private_type_leaks": 0,
    "unused_dependencies": 0,
    "unused_enum_members": 1,
    "unused_class_members": 0,
    "unresolved_imports": 0,
    "unlisted_dependencies": 0,
    "duplicate_exports": 0,
    "type_only_dependencies": 0,
    "test_only_dependencies": 0,
    "circular_dependencies": 0,
    "boundary_violations": 0,
    "stale_suppressions": 0,
    "unused_catalog_entries": 0,
    "empty_catalog_groups": 0,
    "unresolved_catalog_references": 0,
    "unused_dependency_overrides": 0,
    "misconfigured_dependency_overrides": 0
  },
  "unused_files": [],
  "unused_exports": [],
  "unused_types": [],
  "private_type_leaks": [],
  "unused_dependencies": [],
  "unused_dev_dependencies": [],
  "unused_optional_dependencies": [],
  "unused_enum_members": [
    {
      "path": "src/enums.ts",
      "parent_name": "Status",
      "member_name": "Deprecated",
      "kind": "enum_member",
      "line": 8,
      "col": 2,
      "actions": [
        {
          "type": "remove-enum-member",
          "auto_fixable": true,
          "description": "Remove this enum member"
        },
        {
          "type": "suppress-line",
          "auto_fixable": false,
          "description": "Suppress with an inline comment above the line",
          "comment": "// fallow-ignore-next-line unused-enum-member"
        }
      ]
    }
  ],
  "unused_class_members": [],
  "unresolved_imports": [],
  "unlisted_dependencies": [],
  "duplicate_exports": [],
  "type_only_dependencies": [],
  "test_only_dependencies": [],
  "circular_dependencies": [],
  "boundary_violations": [],
  "stale_suppressions": [],
  "unused_catalog_entries": [],
  "empty_catalog_groups": [],
  "unresolved_catalog_references": [],
  "unused_dependency_overrides": [],
  "misconfigured_dependency_overrides": []
}
