crates/cli/tests/snapshots/snapshot_tests__review_github_envelope.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
{
  "event": "COMMENT",
  "body": "### Fallow dead-code report\n\n21 inline findings selected for GitHub review.\n\n<!-- fallow-review -->",
  "comments": [
    {
      "path": "package.json",
      "line": 3,
      "side": "RIGHT",
      "body": "**error** `fallow/misconfigured-dependency-override`: Override \\`@types/react@\\<\\<18\\` -\\> \\`18.0.0\\` is malformed: override key cannot be parsed\n\n<!-- fallow-fingerprint: 21be520b86ce0207 -->",
      "fingerprint": "21be520b86ce0207"
    },
    {
      "path": "package.json",
      "line": 5,
      "side": "RIGHT",
      "body": "**error** `fallow/unused-dependency`: Package 'lodash' is in dependencies but never imported\n\n<!-- fallow-fingerprint: 1d04d08d81daf650 -->",
      "fingerprint": "1d04d08d81daf650"
    },
    {
      "path": "package.json",
      "line": 5,
      "side": "RIGHT",
      "body": "**warn** `fallow/unused-dev-dependency`: Package 'jest' is in devDependencies but never imported\n\n<!-- fallow-fingerprint: 2a4393b133ea1523 -->",
      "fingerprint": "2a4393b133ea1523"
    },
    {
      "path": "package.json",
      "line": 5,
      "side": "RIGHT",
      "body": "**warn** `fallow/unused-optional-dependency`: Package 'fsevents' is in optionalDependencies but never imported\n\n<!-- fallow-fingerprint: 66616a09b329d842 -->",
      "fingerprint": "66616a09b329d842"
    },
    {
      "path": "package.json",
      "line": 8,
      "side": "RIGHT",
      "body": "**warn** `fallow/type-only-dependency`: Package 'zod' is only imported via type-only imports \\(consider moving to devDependencies\\)\n\n<!-- fallow-fingerprint: 34d2064787c07f45 -->",
      "fingerprint": "34d2064787c07f45"
    },
    {
      "path": "package.json",
      "line": 12,
      "side": "RIGHT",
      "body": "**warn** `fallow/test-only-dependency`: Package 'msw' is only imported by test files \\(consider moving to devDependencies\\)\n\n<!-- fallow-fingerprint: ebc538b211ef05f5 -->",
      "fingerprint": "ebc538b211ef05f5"
    },
    {
      "path": "packages/app/package.json",
      "line": 14,
      "side": "RIGHT",
      "body": "**error** `fallow/unresolved-catalog-reference`: Package 'old-react' is referenced via \\`catalog:react17\\` but catalog 'react17' does not declare it; \\`pnpm install\\` will fail \\(available in: react18\\)\n\n<!-- fallow-fingerprint: 3b583c29be84724a -->",
      "fingerprint": "3b583c29be84724a"
    },
    {
      "path": "pnpm-workspace.yaml",
      "line": 6,
      "side": "RIGHT",
      "body": "**warn** `fallow/unused-catalog-entry`: Catalog entry 'is-even' is not referenced by any workspace package\n\n<!-- fallow-fingerprint: 01c68b8e65ee42b9 -->",
      "fingerprint": "01c68b8e65ee42b9"
    },
    {
      "path": "pnpm-workspace.yaml",
      "line": 9,
      "side": "RIGHT",
      "body": "**warn** `fallow/unused-dependency-override`: Override \\`axios\\` forces version \\`^1.6.0\\` but \\`axios\\` is not declared by any workspace package or resolved in pnpm-lock.yaml \\(may target a transitive dependency; pnpm install --frozen-lockfile is the ground truth\\)\n\n<!-- fallow-fingerprint: 9e455c649fd184fe -->",
      "fingerprint": "9e455c649fd184fe"
    },
    {
      "path": "pnpm-workspace.yaml",
      "line": 10,
      "side": "RIGHT",
      "body": "**warn** `fallow/empty-catalog-group`: Catalog group 'react17' has no entries\n\n<!-- fallow-fingerprint: 03506bd5a376e100 -->",
      "fingerprint": "03506bd5a376e100"
    },
    {
      "path": "pnpm-workspace.yaml",
      "line": 12,
      "side": "RIGHT",
      "body": "**warn** `fallow/unused-catalog-entry`: Catalog entry 'old-thing' \\(catalog 'legacy'\\) is not referenced by any workspace package\n\n<!-- fallow-fingerprint: 2d5072d3451b44dd -->",
      "fingerprint": "2d5072d3451b44dd"
    },
    {
      "path": "src/a.ts",
      "line": 3,
      "side": "RIGHT",
      "body": "**error** `fallow/circular-dependency`: Circular dependency: src/a.ts → src/b.ts\n\n<!-- fallow-fingerprint: 405f0abed155920d -->",
      "fingerprint": "405f0abed155920d"
    },
    {
      "path": "src/app.ts",
      "line": 3,
      "side": "RIGHT",
      "body": "**error** `fallow/unresolved-import`: Import './missing-module' could not be resolved\n\n<!-- fallow-fingerprint: 231a7ed9e16a19a6 -->",
      "fingerprint": "231a7ed9e16a19a6"
    },
    {
      "path": "src/cli.ts",
      "line": 2,
      "side": "RIGHT",
      "body": "**error** `fallow/unlisted-dependency`: Package 'chalk' is imported but not listed in package.json\n\n<!-- fallow-fingerprint: 2ef210a41606f3aa -->",
      "fingerprint": "2ef210a41606f3aa"
    },
    {
      "path": "src/config.ts",
      "line": 15,
      "side": "RIGHT",
      "body": "**error** `fallow/duplicate-export`: Export 'Config' appears in multiple modules\n\n<!-- fallow-fingerprint: da73cab5c65b029d -->",
      "fingerprint": "da73cab5c65b029d"
    },
    {
      "path": "src/dead.ts",
      "line": 1,
      "side": "RIGHT",
      "body": "**error** `fallow/unused-file`: File is not reachable from any entry point\n\n<!-- fallow-fingerprint: e3912cb6bb9b0212 -->\n\n> Run `fallow fix --files` or delete this file.",
      "fingerprint": "e3912cb6bb9b0212"
    },
    {
      "path": "src/enums.ts",
      "line": 8,
      "side": "RIGHT",
      "body": "**error** `fallow/unused-enum-member`: Enum member 'Status.Deprecated' is never referenced\n\n<!-- fallow-fingerprint: 090d4d65832bf868 -->",
      "fingerprint": "090d4d65832bf868"
    },
    {
      "path": "src/service.ts",
      "line": 42,
      "side": "RIGHT",
      "body": "**error** `fallow/unused-class-member`: Class member 'UserService.legacyMethod' is never referenced\n\n<!-- fallow-fingerprint: 25579ea7b6940453 -->",
      "fingerprint": "25579ea7b6940453"
    },
    {
      "path": "src/types.ts",
      "line": 5,
      "side": "RIGHT",
      "body": "**error** `fallow/unused-type`: Type export 'OldType' is never imported by other modules\n\n<!-- fallow-fingerprint: deb0e9de35cc06d9 -->",
      "fingerprint": "deb0e9de35cc06d9"
    },
    {
      "path": "src/types.ts",
      "line": 30,
      "side": "RIGHT",
      "body": "**error** `fallow/duplicate-export`: Export 'Config' appears in multiple modules\n\n<!-- fallow-fingerprint: cc6a09c8dc227321 -->",
      "fingerprint": "cc6a09c8dc227321"
    },
    {
      "path": "src/utils.ts",
      "line": 10,
      "side": "RIGHT",
      "body": "**error** `fallow/unused-export`: Export 'helperFn' is never imported by other modules\n\n<!-- fallow-fingerprint: ebe2360218821412 -->",
      "fingerprint": "ebe2360218821412"
    }
  ],
  "meta": {
    "schema": "fallow-review-envelope/v1",
    "provider": "github",
    "check_conclusion": "failure"
  }
}
